--- a/vr4java-installer/pom.xml
+++ b/vr4java-installer/pom.xml
@@ -1,17 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.bubblecloud.vr4java</groupId>
-    <artifactId>vr4java</artifactId>
+    <artifactId>vr4java-installer</artifactId>
+    <packaging>jar</packaging>
     <version>1.0.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
 
-    <scm>
-        <url>https://github.com/bubblecloud/vr4java.git</url>
-        <connection>scm:git:git://github.com:bubblecloud/vr4java.git</connection>
-        <developerConnection>scm:git:git@github.com:bubblecloud/vr4java.git</developerConnection>
-        <tag>HEAD</tag>
-    </scm>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jettyVersion>9.2.2.v20140723</jettyVersion>
+    </properties>
 
     <!-- Deploy releases and snapshots to the CloudBees maven repositories -->
     <distributionManagement>
@@ -38,17 +37,6 @@
         </extensions>
         <plugins>
             <plugin>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.4.2</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.scm</groupId>
-                        <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>1.8.1</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
@@ -59,12 +47,31 @@
         </plugins>
     </build>
 
-    <modules>
-        <module>vr4java-common</module>
-        <module>vr4java-client</module>
-        <module>vr4java-server</module>
-        <module>vr4java-installer</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.6</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.0</version>
+            <type>jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.aether</groupId>
+            <artifactId>aether-api</artifactId>
+            <version>1.0.0.v20140518</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
 
