--- a/vr4java-server/pom.xml
+++ b/vr4java-server/pom.xml
@@ -95,9 +95,31 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.6</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+        </dependency>
+        <dependency>
             <groupId>org.bubblecloud.vr4java</groupId>
             <artifactId>vr4java-common</artifactId>
             <version>1.0.3-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bubblecloud.ilves</groupId>
+            <artifactId>ilves-vaadin</artifactId>
+            <version>2.7.11</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <type>jar</type>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
