--- a/vr4java-installer/pom.xml
+++ b/vr4java-installer/pom.xml
@@ -106,6 +106,11 @@
             <artifactId>maven-aether-provider</artifactId>
             <version>${mavenVersion}</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
 
 
     </dependencies>
