Implemented client splash screen.

--- a/vr4java-client/pom.xml
+++ b/vr4java-client/pom.xml
@@ -93,6 +93,9 @@
                             <classpathPrefix>lib/</classpathPrefix>
                             <mainClass>org.bubblecloud.vr4java.VrClient</mainClass>
                         </manifest>
+                        <manifestEntries>
+                            <SplashScreen-Image>splash.png</SplashScreen-Image>
+                        </manifestEntries>
                     </archive>
                 </configuration>
             </plugin>
