Fixed default server address.

--- a/vr4java-client/src/main/resources/vr4java-client.properties
+++ b/vr4java-client/src/main/resources/vr4java-client.properties
@@ -1,4 +1,4 @@
 server-tsl=false
-server-address=vr4java.herokuapp.com
+server-address=bubblecloud.herokuapp.com
 server-port=80
 package-cache-path=assets
