--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
 
     <groupId>org.bubblecloud.vr4java</groupId>
     <artifactId>vr4java</artifactId>
-    <version>1.1.5-SNAPSHOT</version>
+    <version>1.1.5</version>
     <packaging>pom</packaging>
 
     <scm>
         <url>https://github.com/bubblecloud/vr4java.git</url>
         <connection>scm:git:git://github.com:bubblecloud/vr4java.git</connection>
         <developerConnection>scm:git:git@github.com:bubblecloud/vr4java.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>vr4java-1.1.5</tag>
     </scm>
 
     <!-- Deploy releases and snapshots to the CloudBees maven repositories -->
