--- a/vr4java-client-ext.properties
+++ b/vr4java-client-ext.properties
@@ -1,5 +1,3 @@
 user-name=Tommi Laukkanen
-#server-address=bubblecloud.herokuapp.com
-#server-port=80
-server-address=localhost
-server-port=8080
+server-address=bubblecloud.herokuapp.com
+server-port=80
