--- a/vr4java-client/pom.xml
+++ b/vr4java-client/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.bubblecloud.vr4java</groupId>
     <artifactId>vr4java-client</artifactId>
     <packaging>jar</packaging>
-    <version>1.1.7-SNAPSHOT</version>
+    <version>1.1.7</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -105,7 +105,7 @@
         <dependency>
             <groupId>org.bubblecloud.vr4java</groupId>
             <artifactId>vr4java-common</artifactId>
-            <version>1.1.7-SNAPSHOT</version>
+            <version>1.1.7</version>
         </dependency>
 
         <!--<dependency>
