Changed character model to be configurable.

--- a/vr4java-common/src/main/resources/vr4java-client.properties
+++ b/vr4java-common/src/main/resources/vr4java-client.properties
@@ -1,4 +1,6 @@
 user-name="Anonymous"
+character-model=jme3-open-asset-pack-v1/character/human/male/ogre/male.scene
+#character-model=jme3-open-asset-pack-v1/character/human/female/ogre/female.scene
 server-tsl=false
 server-address=localhost
 server-port=8080
