--- a/vr4java-client/src/main/resources/vr4java-client.properties
+++ b/vr4java-client/src/main/resources/vr4java-client.properties
@@ -3,4 +3,5 @@ server-tsl=false
 server-address=bubblecloud.herokuapp.com
 server-port=80
 package-cache-path=assets
+sound-cache-path=sounds
 test-objects=false
