Added aide notification about user connect.

--- a/vr4java-client-ext.properties
+++ b/vr4java-client-ext.properties
@@ -1,1 +1,3 @@
-
+#Sun Nov 16 20:58:48 EET 2014
+user-name=Tommi Laukkanen
+character-model=jme3-open-asset-pack-v1/character/human/male/ogre/male.scene
