Updated Ilves version to 4.1.4.

--- a/vr4java-client/src/main/resources/vr4java-client.properties
+++ b/vr4java-client/src/main/resources/vr4java-client.properties
@@ -1,7 +1,8 @@
 user-name=Anonymous
 server-tsl=false
-server-address=bubblecloud.herokuapp.com
-server-port=80
+#server-address=bubblecloud.herokuapp.com
+server-address=localhost
+server-port=8080
 package-cache-path=assets
 sound-cache-path=sounds
 test-objects=false
