--- a/vr4java-common/src/main/resources/vr4java-server.properties
+++ b/vr4java-common/src/main/resources/vr4java-server.properties
@@ -1,6 +1,7 @@
 # Web Configuration
 http-port = 8080
 https-port = 0
+production-mode = false
 
 # Keystore Configuration
 key-store-path = site.jks
